BTCPayServer/wwwroot/main-new/btcpay-0.css
:root {
    --body-white: #eeeeee;
    --black-text: #fff;
    --body-back: #F4F5F5;
    --body-back-2: #E5E5E5;
    --button-dark: #202C39;
    --button-dark-text: #CEDC21;
    --lime: #51B13E;
    --gauze: rgba(0,0,0,0.1);
}

section {
    display: grid;
    grid-auto-flow: row;
    grid-template-rows: 250px auto auto;
    justify-content: center;
    align-content: center;
    align-items: center;
    text-align: center;
    padding: 0;
    margin: auto;
}

a, button {
    cursor: pointer;
    transition: 0.2s ease;
}

h1 {
    text-transform: uppercase;
    font-weight: 600;
    font-size: 40px;
    line-height: 60px;
    /* or 150% */
    letter-spacing: 0.1em;
}

body {
    font-family: 'Montserrat';
    background: var(--body-back);
    margin: 0;
    padding: 0;
    min-height: 100vh;
    width: 100vw;
}

p {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 100;
    font-size: 18px;
    line-height: 33px;
    /* or 183% */
    letter-spacing: 0.1em;
    color: #000000;
}

.main-head-link {
    display: inline-block;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    user-select: none;
    line-height: 1.25;
    font-size: 1rem;
    text-decoration: none;
    font-weight: 700;
    text-transform: uppercase;
    border-radius: 300px;
    padding: 15px 30px;
    margin-right: 1rem;
    border-width: 2px;
    border-style: solid;
}

.pri_ {
    background: var(--button-dark);
    color: var(--button-dark-text);
    border-color: var(--button-dark);
}

.sec_ {
    color: var(--button-dark);
    background: var(--body-back);
    border-color: var(--button-dark);
}

    .sec_:hover {
        border-color: var(--lime);
    }

.main-head-link:hover {
    color: var(--lime);
    text-decoration: none;
}

.short-horiz {
    display: block;
    border: 3px solid;
    width: 6rem;
    margin: 2.5em 0;
}

.triangle_, .square_ {
    position: absolute;
    z-index: 0;
}

.s-sh-a {
    transform-origin: 25px 25px;
    animation-name: hoverAboutSlightlyStupidly;
    animation-duration: 18s;
    animation-timing-function: ease-in-out;
    animation-direction: alternate;
    animation-iteration-count: infinite;
}

@keyframes hoverAboutSlightlyStupidly {
    to {
        transform: scale(1.1)rotate(-15deg)translate(0px,10px)
    }
}

.modern-login-register {
    display: block;
    width: 500px;
    max-width: calc(90vw - 100px);
    /* min-width: calc(50vw - 100px); */
    margin: auto 7vw auto 2vw;
    text-align: left;
}

.modern-login-register-inner {
    display: block;
    background: #fff;
    box-shadow: 0 2px 30px rgba(0,0,0,0.1);
    max-width: calc(90vw - 100px);
    width: 500px;
    /* min-width: calc(50vw - 100px); */
    padding: 50px;
    z-index: 1;
    position: relative;
}

.modern-login-register form {
    display: grid;
    grid-auto-flow: row;
    margin-bottom: 1.5em;
}

    .modern-login-register form input {
        border-width: 0px 0px 2px 0px;
        border-color: #000;
        font-family: Montserrat;
        font-style: normal;
        font-weight: 400;
        font-size: 18px;
        line-height: 22px;
        letter-spacing: 0.04em;
        color: #000;
        padding: 1em 0;
    }

.form-name {
    text-transform: uppercase;
    font-weight: 900;
    font-size: 24px;
    line-height: 23px;
}

.form-lab {
    font-family: Montserrat;
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 17px;
    letter-spacing: 0.04em;
    text-transform: uppercase;
}

.fp-button {
    color: var(--button-dark-text);
    background: var(--button-dark);
    border-radius: 10px;
    border-width: 0px;
    padding: 16px 0;
    font-family: Montserrat;
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 17px;
    letter-spacing: 0.06em;
    text-transform: uppercase;
}

.f-el {
    margin-top: 3em;
    display: grid;
    grid-auto-flow: row;
}

.fp-button-sec {
    display: block;
}

masterland {
    display: grid;
    min-height: calc(100vh - 10px);
    width: 100vw;
}


.unbuilt_ {
    display: none;
}

.dark-parent {
    margin: 5vw auto auto 5vw;
    width: 40vw;
    max-width: 90vw;
}

    .dark-parent * {
        color: var(--body-back);
    }

.build-in-up {
    opacity: 0;
    animation: fadeUp 0.5s ease forwards 1;
}

.delay-build {
    animation-delay: 0.4s;
}

@keyframes fadeUp {
    from {
        transform: translate(0px, 50px);
        opacity: 0;
    }

    to {
        transform: translate(0px, 0px);
        opacity: 1;
    }
}

.header-content {
    display: flex;
    flex-flow: row;
    position: relative;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    max-width: 1300px;
}

#learnMore {
    position: relative;
    display: grid;
    min-height: 100vh;
    background: var(--button-dark);
}

.header-content-inner {
    display: block;
    max-width: calc(90vw - 100px);
    /* min-width: calc(40vw - 100px); */
    padding: 50px 0 50px 50px;
    margin: auto 0 auto 5vw;
}

































/* dashboard */

dashboard {
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: 1fr auto;
    height: 100vh;
    width: 100vw;
    position: absolute;
    top: 0;
    left: 0;
    margin: 0;
    padding: 0;
}

sidebar {
    grid-column: 1/2;
    grid-row: 1/2;
    background: var(--body-back-2);
    min-width: calc(350px - 2rem);
    max-width: calc(550px - 2rem);
    width: calc(22vw - 2rem);
    display: grid;
    grid-auto-flow: row;
    grid-template-rows: auto 1fr auto;
    padding: 2rem;
}

workspace {
    grid-column: 2/3;
    grid-row: 1/2;
    background: var(--body-white);
}

possiblyPointlessShortcuts {
    grid-column: 1/3;
    grid-row: 2/3;
    background: var(--button-dark);
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: auto auto;
    grid-column-gap: 4rem;
    padding: 1rem 2rem;
}


.user-cluster {
    display: grid;
    grid-auto-flow: row;
    width: 100%;
    max-width: 200px;
    margin: 2rem auto auto auto;
}

.controls-hor {
    display: grid;
    grid-auto-flow: column;
}

.control-icon-button svg {
    width: calc(.5rem + 30px);
    height: calc(.5rem + 30px);
    padding: 0.5rem;
}


    .control-icon-button svg path {
        fill: var(--button-dark);
    }

.profile-pic {
    height: 120px;
    width: 120px;
    margin: auto auto 2rem auto;
    border-radius: 300px;
    background-color: var(--button-dark);
    background-image: url(https://include.flat18.co.uk/img/cat.png);
    background-size: cover;
    background-position: 50% 50%;
}

.sidebar-menu {
    list-style: none;
    padding: 0;
    margin: 4rem auto auto auto;
}

    .sidebar-menu li a {
        display: grid;
        grid-auto-flow: column;
        grid-template-columns: 50px auto;
        padding: 1rem;
        border-radius: 15px;
        cursor: pointer;
    }

        .sidebar-menu li a, .sidebar-menu li a:hover {
            text-decoration: none;
            font-weight: 100;
            color: var(--button-dark);
            font-style: normal;
        }

            .sidebar-menu li a:hover {
                background: var(--gauze);
            }

    .sidebar-menu li svg path {
        fill: var(--button-dark)
    }







.social-link-item svg * {
    fill: var(--black-text) !important;
}

.social-link-item svg {
    height: 30px;
}



.social-link {
    display: grid;
    margin: auto;
    width: 100%;
    grid-auto-flow: column;
    text-align: right;
}


.control-icon-button {
    border-radius: 100px;
    line-height: 20px;
    text-align: center;
    justify-self: center;
    cursor: pointer;
}


    .control-icon-button:hover svg path {
        /* fill: var(--black-text); */
    }

    .control-icon-button:hover {
        background: var(--button-dark-text);
    }













/* latin */
@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 100;
    src: url("https://include.flat18.co.uk/fonts/montserrat/montserrat-extralight-webfont.eot");
    src: url("https://include.flat18.co.uk/fonts/montserrat/montserrat-extralight-webfont.eot?#iefix") format("embedded-opentype"), url("https://include.flat18.co.uk/fonts/montserrat/montserrat-extralight-webfont.woff2") format("woff2"), url("https://include.flat18.co.uk/fonts/montserrat/montserrat-extralight-webfont.woff") format("woff"), url("https://include.flat18.co.uk/fonts/montserrat/montserrat-extralight-webfont.ttf") format("truetype");
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}
/* latin */
@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 400;
    src: url("https://include.flat18.co.uk/fonts/montserrat/montserrat-regular-webfont.eot");
    src: url("https://include.flat18.co.uk/fonts/montserrat/montserrat-regular-webfont.eot?#iefix") format("embedded-opentype"), url("https://include.flat18.co.uk/fonts/montserrat/montserrat-regular-webfont.woff2") format("woff2"), url("https://include.flat18.co.uk/fonts/montserrat/montserrat-regular-webfont.woff") format("woff"), url("https://include.flat18.co.uk/fonts/montserrat/montserrat-regular-webfont.ttf") format("truetype");
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}
/* latin */
@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 700;
    src: url("https://include.flat18.co.uk/fonts/montserrat/montserrat-bold-webfont.eot");
    src: url("https://include.flat18.co.uk/fonts/montserrat/montserrat-bold-webfont.eot?#iefix") format("embedded-opentype"), url("https://include.flat18.co.uk/fonts/montserrat/montserrat-bold-webfont.woff2") format("woff2"), url("https://include.flat18.co.uk/fonts/montserrat/montserrat-bold-webfont.woff") format("woff"), url("https://include.flat18.co.uk/fonts/montserrat/montserrat-bold-webfont.ttf") format("truetype");
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

